# mendela

./: index.html
mendela-zadanie1/: index.html
mendela-zadanie2/: assignment.md  index.js
mendela-zadanie3/: index.js
mendela-zadanie4/: index.js
sprawdzian/: index.html  index.js
zadanie10/: README.md  angular.json  package-lock.json  package.json
zadanie10/src/: index.html
zadanie10/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
zadanie10/src/assets/core/: Cargo.toml
zadanie10/src/assets/core/src/: lib.rs
zadanie11/: README.md  angular.json  package-lock.json  package.json
zadanie11/src_router/: index.html  styles.scss
zadanie11/src_router/app/: app.component.html  app.component.spec.ts  app.module.ts
zadanie11/src_router/assets/: czasopisma.xml
zadanie11/src_state/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
zadanie11/xxiv/: package-lock.json
zadanie2/: index.html  index.js
zadanie3/: index.html
zadanie4/: index.html
zadanie5/: index.html  package.json  tsconfig.json
zadanie5/src/: index.js  index.ts
zadanie6/: index.html
zadanie6/src/: index.js  index.ts
zadanie7/: index.html  tsconfig.json
zadanie7/src/: Menu.ts  Player.ts  Track.ts  index.ts
zadanie8/backend/: data.php  db.php  delete.php  get_alloys.php  get_countries.php  index.php  update.php
zadanie8/frontend/: index.html  package.json
zadanie9/: index.html  package.json  vite.config.ts
zadanie9/docs/: index.html
zadanie9/public/: script.js
zadanie9/src/: main.ts
(+74 files in other folders)
