[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Komęza <dawid.komeza@outlook.com>"]
description = "Backend for tic-tac-toe"
license = "MIT/Apache-2.0"
repository = "https://github.com/dkomeza/mendela/zadanie10"
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"

[dependencies.wasm-bindgen]
version = "0.2.85"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
